--- a/Assignment5/assignment5.css
+++ b/Assignment5/assignment5.css
@@ -4,7 +4,7 @@ body{
 }
 
 h1{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     background-color:white;
     font-weight:normal;
     padding:20px;
@@ -38,7 +38,7 @@ nav li a:hover{
 }
 
 h2{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     border-bottom: 3px solid black;
     padding-bottom:15px;
     margin-bottom: 20px;
