--- a/Assignment6/a6.css
+++ b/Assignment6/a6.css
@@ -15,6 +15,8 @@ body{
 
 header{
     grid-column: span 12;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 h1{
@@ -24,7 +26,6 @@ h1{
     font-weight: normal;
     padding: 15px;
     margin: 15px;
-    
 }
 
 nav{
@@ -35,6 +36,7 @@ nav ul{
     list-style-type: none;
     margin-top: 0px;
     padding: 15px;
+    padding-top: 0px;
     margin-bottom: 30px;
 }
 
@@ -42,7 +44,6 @@ nav li {
     border: 1px solid red;
     width: 160px;
     margin: 10px;
-    margin-right: 15px;
     display: inline-block;
     background-color: red;
 }
@@ -52,6 +53,7 @@ nav li a{
     text-decoration:none;
     display:block;
     padding: 10px;
+    padding-right: 20px;
 }
 
 nav li a:hover{
@@ -60,6 +62,7 @@ nav li a:hover{
 
 h2{
     font-family:Helvetica, Arial, sans-serif;
+    margin-top: 0px;
     padding-bottom: 10px;
     border-bottom: 3px solid black;
 }
@@ -75,7 +78,8 @@ h2{
 }
 
 main{
-    grid-column: span 8;
+    grid-column: span 9;
+    margin-right: 20px;
 }
 
 span{
