--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -142,5 +142,36 @@ main a:hover{
   color:#cdade8
 }
 
+main h3{
+  text-align:center;
+  font-size: 30px;
+  margin: 5px;
+  padding-bottom: 5px;
+  font-family: "adorn-engraved", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+  border-bottom: solid white 2px;
+  margin-right: 30px;
+}
 
+main p{
+  color:white;
+  font-family: "ratiomodern", serif;
+  margin-right: 30px;
+}
+
+#myCarousel {
+  margin-bottom: 20px;
+  margin-right: 30px;
+  width: 690px;
+}
+
+#myCarousel img{
+  width: 100%;
+}
+
+#myCarousel .f-carousel__slide {
+  margin-top: 20px;
+}
 
