--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -146,7 +146,7 @@ main h3{
   text-align:center;
   font-size: 30px;
   margin: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 3px;
   font-family: "adorn-engraved", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -175,3 +175,62 @@ main p{
   margin-top: 20px;
 }
 
+#selfie{
+  width: 43%;
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 1px;
+  
+}
+
+.uniqueh3{
+  text-align: left;
+  font-size: 30px;
+  margin: 5px;
+  padding-bottom: 5px;
+  font-family: "adorn-engraved", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+  border-bottom: solid white 2px;
+  margin-right: 5px;
+  padding-right: 290px;
+}
+
+.uniqueli{
+  list-style-type: circle;
+  background-color: #222222;
+  border: 0px solid black;
+  font-size: 20px;
+}
+
+iframe{
+  margin-top: 15px;
+}
+
+.mph3{
+  border-bottom: 0px;
+  margin-top: 0px;
+}
+
+.uniquelink{
+  color: white;
+  text-decoration:underline;
+  font-family: "ratiomodern", serif;
+}
+
+#FGCA {
+  margin-bottom: 20px;
+  margin-right: 30px;
+  width: 300px;
+  margin-left: 200px;
+}
+
+#FGCA img{
+  width: 100%;
+  
+}
+
+#FGCA .f-carousel__slide {
+  margin-top: 20px;
+}
